2015-10-23  Gregory Soyez  <soyez@fastjet.fr>

	* MC_LHQG_Zjet.cc:             *** ADDED ***
	* MC_LHQG_dijet.cc:            *** ADDED ***
	added preliminary verasions of the pp analyses
	compared to their ee equivalent:
	- they use the same observables (using pt,DeltaR instead of E,angle)
	- they directly target physics processes, either Z+jet or dijet
	  with no flavour specified initially
	- the cuts change and are slightly different in the two cases
	- we included measures on mMDT jets to have a feeling of the impact

2015-09-18  Jesse Thaler  <jthaler@mit.edu>

	* lh2015_qg.tex:
	. Further work improving the text, adding analytic resummation information.

2015-09-15  Jesse Thaler  <jthaler@mit.edu>

	* AnalyticResum/txt2yoda
	. Updated file to use xmin and xmax
	. Updated corresponding analytic results files to match.

2015-09-14  Jesse Thaler  <jthaler@mit.edu>

	* lh2015_qg.tex:
	. adding information about quark/gluon composition at parton level

	* AnalyticResum/QvGAnalytics.nb:
	. First pass at generating analytic histogram files for Yoda processing

2015-08-04  Jesse Thaler  <jthaler@mit.edu>

	* lh2015_qg.tex:
	. Adding Sherpa parton-level results to file

	* AnalyticResum/QvGAnalytics.nb:
	. Adding Andrew's mathematica notebook to github

2015-08-03  Jesse Thaler  <jthaler@mit.edu>

	* lh2015_qg.tex:
	. Small tweaks (including updating author list)
	. Subsection on LL value of classifier separation

2015-07-23  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	added {quark, gluon, separation} to the plot titles
	[and propagated this to the generator comparison plots]

	* post-process.sh:
	added an extra entry in the HTML summary table that lists the
	variants present for each generator

	* post-process.sh:
	* style-modulations.plot:
	* style-separation.plot:
	* style-variations.plot:     *** ADDED ***
	adapted the style files (and the script) so that the plots can be
	understood outside of the context of the webpages
